tdf#159544 use top of parameter stack for COUNTIFS

The evaluation of the fooIFS functions attempts to reduce the range to be
examined so that empty cells at the end of a range are not examined. To
do this, it uses the range at the bottom of the parameter stack. That
works well, for example, with SUMIFS and AVERAGEIFS, because this range
does not have an associated criterion, but instead contains the data to
be summed up.

In the case of COUNTIFS, however, all ranges have an associated criterion
and such might query for empty cells. At the point in the process when
the reduction takes place, the criteria are not yet known. Therefore,
when the criteria are later resolved, the reduction is reversed in case
the criterion queries for empty cells.

The evaluation of ranges and criteria starts at the top of the parameter
stack and goes then backwards. That means that the reduction was based
on the range at the bottom of the stack, but the reversal of the
reduction was based on the criterion at the top of the stack.

The solution is to use the range of the parameter at the top of the
stack to calculate the range reduction in the case of the COUNTIFS
function.

Change-Id: Ia451312b83ab73f52020edd204fb2e37997714e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198058
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 709bb398d0ed123e9bf52b98b46f27418bbddef5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198127
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>