sc/qa/unit/ucalc_formula2.cxx
@@ -4729,6 +4729,36 @@ CPPUNIT_TEST_FIXTURE(TestFormula2, testHoriQueryEmptyCell)
     m_pDoc->DeleteTab(0);
 }
 
+CPPUNIT_TEST_FIXTURE(TestFormula2, testVertQueryEmptyCell)
+{
+    //Test for fix for tdf#159544
+    m_pDoc->InsertTab(0, u"Test"_ustr);
+
+    // Data in A1:B10, with empty A3, A5, A6, A7, A9, A10
+    m_pDoc->SetString(0, 0, 0, u"a"_ustr); // A1 col, row, tab
+    m_pDoc->SetString(0, 1, 0, u"b"_ustr); // A2
+    m_pDoc->SetString(0, 3, 0, u"d"_ustr); // A4
+    m_pDoc->SetString(0, 7, 0, u"h"_ustr); // A8
+    for (SCROW nRow = 0; nRow <= 9; ++nRow)
+    {
+        m_pDoc->SetValue(1, nRow, 0, nRow + 1);
+    }
+
+    m_pDoc->SetFormula(ScAddress(3, 0, 0), "=COUNTIFS(A1:A10;\"=\";B1:B10;\">0\")",
+                       formula::FormulaGrammar::GRAM_NATIVE_UI);
+    // As >0 is true for all cells in B1:B10, match is determined by empty cells in col A1:A10.
+    // Without fix the range was reduced, so that B9 and B10 were not count and result was 4.
+    CPPUNIT_ASSERT_EQUAL(6.0, m_pDoc->GetValue(ScAddress(3, 0, 0)));
+
+    // Make sure the result is identical for exchanged queries. This tests that the range
+    // reduction has actually been reversed.
+    m_pDoc->SetFormula(ScAddress(3, 1, 0), "=COUNTIFS($B1:$B10;\">0\";A1:A10;\"=\")",
+                       formula::FormulaGrammar::GRAM_NATIVE_UI);
+    CPPUNIT_ASSERT_EQUAL(6.0, m_pDoc->GetValue(ScAddress(3, 1, 0)));
+
+    m_pDoc->DeleteTab(0);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
